--- a/faq.html
+++ b/faq.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-    <title>CGIpaf 1.3.1 FAQ</title>
+    <title>CGIpaf 1.3.4 FAQ</title>
   </head>
 
   <body>
     
-    <h1>CGIpaf 1.3.1 FAQ</h1>
+    <h1>CGIpaf 1.3.4 FAQ</h1>
     <p>
     <h2>1 <a href="#s1">Introduction to CGIpaf</a></h2>
     <ul>
@@ -190,12 +190,13 @@ CGIpaf works on Solaris ( only tested on solaris 8 )
 </li>
 <li><b>FreeBSD</b>
 <p>
-FreeBSD is supported, but the PAM password updater doesn't seems to work on FreeBSD.
-Therefor CGIpaf is compiled without PAM support on FreeBSD.
+FreeBSD is supported.
+The PAM password changer is supported on FreeBSD 7.3 or above.
 </p></li>
 <li><b>NetBSD</b>
 <p>
 NetBSD is suppored.
+The PAM password changer is supported on NetBSD 6.0 or above.
 </p>
 <li><b>OpenBSD</b>
 <p>
