faq: Debian repository updated

--- a/faq.html
+++ b/faq.html
@@ -120,7 +120,7 @@ The current locations are:
 <ul>
 <li>main site: <a href="http://www.wagemakers.be/english/programs/cgipaf">http://www.wagemakers.be/english/programs/cgipaf</a></li>
 </li>
-<li>debian packages: <a href="http://users.skynet.be/wagemakers/debian/">http://users.skynet.be/wagemakers/debian/</a>
+<li>debian packages: <a href="http://www.wagemakers.be/downloads/debian/">http://www.wagemakers.be/downloads/debian/</a>
 </li>
 </ul>
 <p>
@@ -427,7 +427,7 @@ The OpenBSD port is still in the pipeline.
     <address><a href="mailto:staf at wagemakers.be">staf wagemakers</a></address>
 <!-- Created: Mon Apr  8 20:42:51 CEST 2002 -->
 <!-- hhmts start -->
-Last modified: Wed Jul 13 13:25:14 CEST 2004
+Last modified: Wed Mar 13 13:40:17 CET 2013
 <!-- hhmts end -->
   </body>
 </html>
