faq en ChangeLog Updated for 1.3.4 release

--- a/faq.html
+++ b/faq.html
@@ -418,11 +418,9 @@ platforms. I hoped that I could reuse the BSD code for the OpenBSD port, but the
 were against me. The BSD port doesn't works without trouble on OpenBSD versions.
 </p>
 <p>
-I still want to support FreeBSD with PAM enabled (the non-pam code works fine, but PAM is more
-flexible) the authentication works but the PAM password changer doesn't -weird-.
+PAM on FreeBSD and NetBSD have been improved over the years.<br /> 
+PAM support is enabled by default on FreeBSD 7.3 or above and NetBSD 6 or above.
 <p>
-The OpenBSD port is still in the pipeline.
-</p
 <hr />
     <address><a href="mailto:staf at wagemakers.be">staf wagemakers</a></address>
 <!-- Created: Mon Apr  8 20:42:51 CEST 2002 -->
