--- a/Configuration.html
+++ b/Configuration.html
@@ -5,8 +5,19 @@
 <title>CGIpaf configuration</title>
 </head>
 <body bgcolor="#ffffff" text="#000000" link="#0000ff" alink="#ff0000" vlink="#2f009f">
-<h1>CGIpaf 1.3.2<br>
-Configuration</h1>
+<h1>CGIpaf 1.3.5 Configuration</h1>
+<hr>
+<a name="copyright"></a>
+<h2>Copyright Notice</h2>
+<p>
+Copyright &copy; 2001 - 2020 Staf Wagemnakers
+<p>
+Permission is granted to copy, distribute and/or modify this document under the
+terms of the <code><a href="http://www.fsf.org/copyleft/gpl.html">GNU Public
+License, Version 2</a></code> or any later version published by the Free
+Software Foundation.  It is distributed in the hope that it will be useful, but
+WITHOUT ANY WARRANTY.
+<hr>
 <h1>Content</h1>
 <ul>
 <li><a href="#syntax">Syntax</a></li>
