--- a/faq.html
+++ b/faq.html
@@ -2,12 +2,24 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-    <title>CGIpaf 1.3.4 FAQ</title>
+    <title>CGIpaf 1.3.5 FAQ</title>
   </head>
 
   <body>
     
-    <h1>CGIpaf 1.3.4 FAQ</h1>
+    <h1>CGIpaf 1.3.5 FAQ</h1>
+<hr>
+<a name="copyright"></a>
+<h2>Copyright Notice</h2>
+<p>
+Copyright &copy; 2001 - 2020 Staf Wagemnakers
+<p>
+Permission is granted to copy, distribute and/or modify this document under the
+terms of the <code><a href="http://www.fsf.org/copyleft/gpl.html">GNU Public
+License, Version 2</a></code> or any later version published by the Free
+Software Foundation.  It is distributed in the hope that it will be useful, but
+WITHOUT ANY WARRANTY.
+<hr>
     <p>
     <h2>1 <a href="#s1">Introduction to CGIpaf</a></h2>
     <ul>
