--- a/faq.html
+++ b/faq.html
@@ -11,14 +11,61 @@
 <hr>
 <a name="copyright"></a>
 <h2>Copyright Notice</h2>
+<h3>Copyright documentation</h2>
+<p>
+The documentation for CGIpaf is licensed under the terms of the FreeBSD
+Documentation License.
+<h4>The FreeBSD Documentation License</h4>
 <p>
 Copyright &copy; 2001 - 2020 Staf Wagemnakers
 <p>
-Permission is granted to copy, distribute and/or modify this document under the
-terms of the <code><a href="http://www.fsf.org/copyleft/gpl.html">GNU Public
-License, Version 2</a></code> or any later version published by the Free
-Software Foundation.  It is distributed in the hope that it will be useful, but
-WITHOUT ANY WARRANTY.
+Redistribution and use in source (Markdown, plaintext, et. al.) and
+"compiled" forms (HTML, PDF and so forth) with or without modification,
+ are permitted provided that the following conditions are met:
+<ol>
+  <li>
+Redistributions of source code (Markdown, plaintext, et. al.) must 
+retain the above copyright notice, this list of conditions and the
+ following disclaimer as the first lines of this file unmodified.
+  </li>
+  <li>
+Redistributions in compiled form (HTML, PDF and so on) must reproduce
+the above copyright notice, this list of conditions and the following
+ disclaimer in the documentation and/or other materials provided with
+the distribution.
+  </li>
+</ol>
+ <p>THIS DOCUMENTATION IS PROVIDED BY THE FREEBSD DOCUMENTATION
+    PROJECT "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING,
+    BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
+    FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL
+    THE FREEBSD DOCUMENTATION PROJECT BE LIABLE FOR ANY DIRECT, INDIRECT,
+    INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
+    BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
+    OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
+    ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
+    TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
+    USE OF THIS DOCUMENTATION, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
+    DAMAGE.</p>
+<a name="copyright_software"></a>
+<h3>Copyright Software</h2>
+CGIpaf (the software) is licensed under the terms of the GNU General Public
+License version 2 or later.
+<p>
+Copyright &copy; 2001 - 2020 Staf Wagemnakers
+<p>
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 2 of the License, or
+(at your option) any later version.
+<p>
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+<p>
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <a href="https://www.gnu.org/licenses/">https://www.gnu.org/licenses/</a>.
 <hr>
     <p>
     <h2>1 <a href="#s1">Introduction to CGIpaf</a></h2>
