removed the first lines statements

--- a/Configuration.html
+++ b/Configuration.html
@@ -25,7 +25,7 @@ Redistribution and use in source (Markdown, plaintext, et. al.) and
   <li>
 Redistributions of source code (Markdown, plaintext, et. al.) must 
 retain the above copyright notice, this list of conditions and the
- following disclaimer as the first lines of this file unmodified.
+ following disclaimer.
   </li>
   <li>
 Redistributions in compiled form (HTML, PDF and so on) must reproduce
