updated the Freebsd documentation license notice

--- a/faq.html
+++ b/faq.html
@@ -11,32 +11,26 @@
 <hr>
 <a name="copyright"></a>
 <h2>Copyright Notice</h2>
+<a name="copyright_documentation"></a>
 <h3>Copyright documentation</h2>
 <p>
 The documentation for CGIpaf is licensed under the terms of the FreeBSD
 Documentation License.
 <h4>The FreeBSD Documentation License</h4>
 <p>
-Copyright &copy; 2001 - 2020 Staf Wagemnakers
+Copyright &copy; 2001 - 2020 Staf Wagemakers
 <p>
-Redistribution and use in source (Markdown, plaintext, et. al.) and
-"compiled" forms (HTML, PDF and so forth) with or without modification,
- are permitted provided that the following conditions are met:
+Redistribution and use in source (plaintext, HTML) and 'compiled' forms (SGML, HTML, PDF, PostScript, RTF and so forth) with or without modification, are permitted provided that the following conditions are met:
 <ol>
   <li>
-Redistributions of source code (Markdown, plaintext, et. al.) must 
-retain the above copyright notice, this list of conditions and the
- following disclaimer.
+Redistributions of source code (plaintext, HTML) must retain the above copyright notice, this list of conditions and the following disclaimer.
   </li>
   <li>
-Redistributions in compiled form (HTML, PDF and so on) must reproduce
-the above copyright notice, this list of conditions and the following
- disclaimer in the documentation and/or other materials provided with
-the distribution.
+Redistributions in compiled form (transformed to other DTDs, converted to PDF, PostScript, RTF and other formats) must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
   </li>
 </ol>
  <p>
-  THIS DOCUMENTATION IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED 
+ THIS DOCUMENTATION IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED 
 WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF 
 MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. 
 IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
